# django_simple_menus

./: MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg
example/: settings.py  urls.py
example/templates/: index.html
simple_menus/: __init__.py  admin.py  apps.py  models.py  version.py
simple_menus/migrations/: 0001_initial.py  0002_menu_template_string.py
simple_menus/templates/: menu.html
simple_menus/templatetags/: simplemenus_tags.py
simple_menus/wagtail/: admin.py
